# GoGame

./: .cursorignore  .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOY_QUICK_START.md  Dockerfile.backend  FLYIO_QUICK_START.md  GIT_PUSH_GUIDE.md  GIT_PUSH_SUCCESS.md  GIT_READY_TO_PUSH.md  GIT_WORKFLOW.md  INSTALLATION.md  LICENSE  PREPARE_FOR_GITHUB.md  README.md  README_GOGAME_PY.md  README_START.md  SETUP.md  SETUP_MINIMAL.md  build.rar  dbPostgreSQL.sql  docker-compose.prod.yml  docker-compose.yml  fly.toml
backend/: 404_ERRORS_GUIDE.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.simple  FIXED_INSTALL.md  FIX_BACKEND_CONNECTION.md  FIX_MACHINE_TIMEOUT.md  QUICK_START.md  README.md  SIMPLE_INSTALL.md  SUCCESS.md  TROUBLESHOOTING_AI.md  TROUBLESHOOTING_SETUP.md  alembic.ini  deploy_fly.bat  deploy_fly.sh  env.example  fix_venv.bat  fly.toml  install_deps.bat  install_deps.sh  requirements.txt  requirements_minimal.txt  run.bat  run.sh  run_alembic.bat  run_alembic_simple.bat  setup.bat  setup.sh  start.bat  start.sh
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/docs/: CURRENCY_AND_PREMIUM_SYSTEM.md
checkpoints/: HUONG_DAN_DAT_FILE.md  README.md
docs/: ADVANCED_FEATURES.md  AI_DIFFICULTY_ADJUSTMENT.md  ARCHITECTURE_CHANGE_MINIMAX_ONLY.md  BOARD_STATE_OPTIMIZATION.md  BackendDesign.md  CAPTURE_MECHANISM_DETAILED.md  COLAB_LABELING_GUIDE.md  COLAB_TRAINING_SUMMARY.md  CPP_MODULE_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_FLYIO.md  ELO_RANKING_SYSTEM.md  FRONTEND_GUIDE.md  GAME_LOGIC_FLOW.md  GO_RULES_CLARIFICATION.md  GO_RULES_VERIFICATION.md  HUONG_DAN_SU_DUNG_MODEL.md  LEVEL_3_4_DETAILS.md  LOGIC_VERIFICATION.md  MACHINE LEARNING.md  MATCHMAKING_READY_FLOW.md  MATCHMAKING_SYSTEM.md  MCTS_IMPROVEMENTS.md  MCTS_IMPROVEMENTS_V2.md  MCTS_PLAYOUTS_EXPLAINED.md  ML_COMPREHENSIVE_GUIDE.md  ML_MASTER_GUIDE.md  ML_MODEL_INTEGRATION.md  ML_QUICK_START.md  ML_TRAINING_COLAB_GUIDE.md  ML_TRAINING_KAGGLE_GUIDE.md  ML_TRAINING_ROADMAP.md  PRISONERS_SCORING.md  PROGRESS.md  SCORING_SYSTEM.md  SGF_PARSING_UPDATES.md  SystemSpec.md  TEST_MODEL_IN_GAME.md  TEST_RESULTS.md  UI_LOGIC_REVIEW.md  (+1 more)
frontend/: README.md  main.py  requirements.txt  run.bat
frontend-web/: CHECK_REGISTRATION.md  DEBUG_BOARD.md  Dockerfile  QUICK_FIX.md  QUICK_START.md  QUICK_START_FULL.md  README.md  README_NODEJS_FIX.md  SETUP.md  START_BACKEND.md  TROUBLESHOOTING.md  deploy_fly.bat  deploy_fly.sh  fix_and_run.sh  fix_nodejs_path.bat  fix_nodejs_path.sh  fly.toml  index.html  nginx.conf  package-lock.json  package.json  run.sh  test_backend_connection.js  test_localstorage.html
scripts/: ADVANCED_OPTIMIZATIONS.md  CHECK_POSITIONS_README.md  CHECK_RESULT.md  COLAB_50GB_RAM_OPTIMIZATION.md  COLAB_50GB_RAM_SINGLE_WORKER.md  COLAB_BACKWARD_COMPATIBILITY.md  COLAB_CODE_COMPATIBILITY.md  COLAB_PRO_OPTIMIZATION.md  COLAB_SETUP_GUIDE.md  COLAB_STUDENT_OPTIMIZATION.md  COLAB_TRAINING_AUTO_COPY.md  COLAB_TRAINING_OPTIMIZED.md  CRITICAL_PERFORMANCE_FIX.md  DEBUG_LABEL_ERRORS.md  INSTALL_MSYS2.md  LABELING_CHANGES_SUMMARY.md  LABELING_FIXES.md  MULTI_TASK_LABELS_IMPLEMENTATION.md  OPTIMIZED_WITH_FULL_RULES.md  PARSE_9X9_FORMAT.md  PARSE_BY_YEAR_README.md  PARSE_WITH_CHUNKING_README.md  PERFORMANCE_FIX.md  QUICK_FIX.md  QUICK_START_9X9.md  README_CHUNK_TRAINING.md  README_COLAB_LABELING.md  README_COLAB_SETUP.md  README_COLAB_TRAINING.md  README_LOCAL_PROCESSING.md  SETUP_GUIDE.md  SINGLE_THREADED_OPTIMIZATION.md  TRAIN_MULTITASK_COLAB.md  UPDATE_COLAB_LABELS.md  activate_venv.bat  activate_venv.sh  build_and_test_gogame_py.sh  build_gogame_py_simple.bat  build_gogame_py_simple.sh  check_gogame_py.py  (+61 more)
tests/: test_board.cpp  test_mcts.cpp  test_minimax.cpp
(+157503 files in other folders)
